# plasma-engine-research

./: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_complex.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  models.py
app/routers/: __init__.py  documents.py  embeddings.py  knowledge_graph.py  search.py
tests/: conftest.py  test_config.py  test_health.py  test_main.py  test_performance.py
